--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ packages = [
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+gendiff = "gendiff.scripts.gendiff:main"
