--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pytest = "^6.2.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
