--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.9"
 pytest = "^6.2.4"
+coverage = "^5.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
