step 4. refactor coverage runner config

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,9 @@ jobs:
           pip install coverage
           pip install poetry
           make test
-          make coverage
 
       - uses: paambaati/codeclimate-action@v2.7.5
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_TEST_REPORTER_ID }}
         with:
-          coverageLocations: ./.coverage.xml:coveragepy
+          coverageCommand: make coverage
