step 5. fix test workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,9 +16,8 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          pip install pytest
-          pip install coverage
           pip install poetry
+          make install
           make test
 
       - uses: paambaati/codeclimate-action@v2.7.5
